firefox/linux/userChrome.css
:root {
	/* 타이틀바 시스템 버튼 영역 크기 */
	--q-titlebar-buttonbox-width: 72px;
	--q-titlebar-buttonbox-height: 40px;
	
	/* 사이드바 설정 */
	--q-sidebar-width: 40px; /* 사이드바가 닫혀 있을 때 크기 */
	--q-sidebar-active-width: 280px; /* 사이드바가 열려 있을 때 크기 */
	--q-sidebar-hide-delay: 180ms;
	--q-sidebar-hide-time: 190ms;
	--q-sidebar-hide-ease: cubic-bezier(0.23, 1, 0.320, 1);
	--q-sidebar-open-time: 215ms;
	--q-sidebar-open-ease: cubic-bezier(0.23, 1, 0.320, 1);
	--q-sidebar-open-delay: 0ms;
	--q-sidebar-expanded-menu-width: 36px;
	
	/* 창 최소 크기 */
	--q-min-window-width: 460px;
	--q-min-window-height: 280px;
}

/* 창 최소 크기 변경 */
html#main-window {
	min-width: var(--q-min-window-width) !important;
	min-height: var(--q-min-window-height) !important;
}

/* 기본 버티컬 탭 바 숨기기 */
:root:not(:has(#sidebar-button[checked="true"])) #sidebar-main {
	display: none !important;
}
#sidebar-main {
	width: var(--q-sidebar-expanded-menu-width) !important;
	max-width: var(--q-sidebar-expanded-menu-width) !important;
	min-width: var(--q-sidebar-expanded-menu-width) !important;
}
.buttons-wrapper:has(.tools-and-extensions.actions-list) {
	flex-direction: column !important;
	& button-group {
		flex-wrap: wrap-reverse !important;
		padding-inline: var(--toolbarbutton-outer-padding) !important;
		padding-block-end: var(--toolbarbutton-outer-padding) !important;
		--button-border-radius: var(--toolbarbutton-border-radius);
	}
}
#sidebar-tools-and-extensions-splitter,
#sidebar-launcher-splitter,
#vertical-tabs {
	display: none !important;
}

/* URL 바 열었을 때 더 크게 */
#urlbar-container>#urlbar {
	--urlbar-height: 35px !important;
	--urlbar-container-padding: 0px !important;
	@media only screen and (min-width: 660px) {
		--urlbar-margin-inline: 80px !important;
	}
}

/* 툴바 요소 화면 작으면 숨기기 */
@media (-moz-platform: windows) {
	@media only screen and (max-width: 720px) {
		/* 리로드 버턴 */
		#stop-reload-button {
			display: none !important;
		}
		/* 트래킹 보호, ssl 아이덴티티 박스 */
		#tracking-protection-icon-container,#identity-icon-box {
			display: none !important;
		}
		/* URL 바 내부 줌버튼 */
		#urlbar-zoom-button {
			display: none !important;
		}
		/* 시스템 버튼 크기조절 */
		.titlebar-buttonbox>* {
			padding-left: 12px !important;
			padding-right: 12px !important;
		}
		/* urlbar 최소크기 */
		#nav-bar #urlbar-container {
			width: calc(90px + 24px + 2 * var(--toolbarbutton-inner-padding)) !important;
		}
	}
	@media (max-width: 565px) {
		/* 버튼 크기조정 */
		#nav-bar-customization-target>toolbaritem.unified-extensions-item>toolbarbutton,#PanelUI-button>toolbarbutton,#TabsToolbar toolbarbutton,#nav-bar-customization-target>toolbarbutton,#nav-bar>toolbarbutton {
			padding: 0 !important;
			width: 30px !important;
			min-width: 30px !important;
			--toolbarbutton-inner-padding: 4px !important;
		}
		#back-button {
			margin-left: 4px !important;
		}
		toolbarspring { display: none !important; }
	}
	@media only screen and (max-width: 490px) {
		#back-button, #forward-button, #sidebar-button {
			display: none !important;
		}
		#urlbar-container {
			margin-left: 10px !important;
		}
	}
}
@media (-moz-platform: linux) {
	@media only screen and (max-width: 490px) {
		#back-button, #forward-button, #sidebar-button {
			display: none !important;
		}
		#urlbar-container {
			margin-left: 10px !important;
		}
	}
	@media only screen and (max-width: 590px) {
		#stop-reload-button {
			display: none !important;
		}
	}
}
#urlbar-container {
	margin-left: 4px !important;
}

/* 사이드바 해더, 리사이저 숨기기 */
#sidebar-splitter, #sidebar-header, #sidebar-panel-header {
	display: none !important;
}

/* 수직 사이드바의 스타일링을 제거합니다 */
#sidebar {
	box-shadow: none !important;
	border-radius: 0 !important;
	outline: none !important;
}
#sidebar-box {
	padding-inline-end: 0 !important;
	padding-block-end: 0 !important;
}

/* 전채 화면일 때 사이드바 숨김*/
:root[inFullscreen] #sidebar-box {
	width: 1px !important;
	max-width: 1px !important;
	min-width: 1px !important;
}

/* 비 익스텐션 패널의 크기를 일치시킵니다 */
#sidebar-box:has(#sidebar:not(#sidebar[src="chrome://browser/content/webext-panels.xhtml"])) {
	width: var(--q-sidebar-active-width) !important;
}

/* 익스텐션 패널에 한하여 호버링 액션을 수행합니다 */
#sidebar-box:has(#sidebar[src="chrome://browser/content/webext-panels.xhtml"]) {
	/* 사이드바 자식 내용이 넘처 흐를 수 있게합니다 */
	overflow: visible;
	z-index: 1000 !important;
	position: relative;

  /* 사이드바 호버 영역 크기 조절 */
  width: var(--q-sidebar-width) !important;
	max-width: var(--q-sidebar-width) !important;
	min-width: var(--q-sidebar-width) !important;
	
	/* 사이드바 내부 브라우저를 클립하여 트랜지셔닝합니다. */
	clip-path: rect(0px var(--q-sidebar-width) 100% 0px);
	transition: clip-path var(--q-sidebar-hide-time) var(--q-sidebar-hide-ease) var(--q-sidebar-hide-delay) !important;
	&:is(:root[inFullscreen] #sidebar-box) {
	  clip-path: rect(0px 1px 100% 0px);
	}
	&:hover,
	&:is(:root[inFullscreen] #sidebar-box):hover {
		clip-path: rect(0px var(--q-sidebar-active-width) 100% 0px);
		transition: clip-path var(--q-sidebar-open-time) var(--q-sidebar-open-ease) var(--q-sidebar-open-delay) !important;
	}
	&:is(:root:not([inFullscreen]):has(#sidebar-button[checked="true"]) #sidebar-box) {
		/* 사이드바 버튼 눌림 상태 */
		width: var(--q-sidebar-active-width) !important;
		max-width: var(--q-sidebar-active-width) !important;
		min-width: var(--q-sidebar-active-width) !important;
		clip-path: rect(0px var(--q-sidebar-active-width) 100% 0px);
		transition: none !important;
	}
	
	/* 사이드바 내부 브라우저의 실제 크기를 조절합니다 */
	& #sidebar {
		transition: width 0s linear calc(var(--q-sidebar-hide-time) + var(--q-sidebar-hide-delay));
		width: var(--q-sidebar-width) !important;
	}
	&:is(:root[inFullscreen] #sidebar-box) #sidebar {
		width: 1px !important;
	}
	&:hover #sidebar, &:is(:root[inFullscreen] #sidebar-box):hover #sidebar {
		transition: width 0s linear 0s;
		width: var(--q-sidebar-active-width) !important;
	}
	&:is(:root:not([inFullscreen]):has(#sidebar-button[checked="true"]) #sidebar-box) #sidebar {
		/* 사이드바 버튼 눌림 상태 */
		width: var(--q-sidebar-active-width) !important;
		transition: width 0s linear 0s;
	}
}

/* Markdown new tab, Sidebery 표시 숨기기 */
#identity-icon-box:has([value="Extension (Markdown New Tab)"]),
#identity-icon-box:has([value="Extension (Tabliss)"]),
#identity-icon-box:has([value="Extension (Sidebery)"])
{ display: none; }

